fixed little z-index issue

--- a/dev/sass/pages/_home.scss
+++ b/dev/sass/pages/_home.scss
@@ -5,3 +5,9 @@ body, html {
   float: left;
   padding: 20px;
 }
+.daterange--double {
+  z-index: 2;
+}
+.daterange--single {
+  z-index: 1;
+}
